Fixed some CSS - no longer big gaps in the services sub-menus!

--- a/src/notebook/ipython_profiles/profile_narrative/kbase_templates/static/kbase/css/kbaseNarrFunc.css
+++ b/src/notebook/ipython_profiles/profile_narrative/kbase_templates/static/kbase/css/kbaseNarrFunc.css
@@ -23,6 +23,11 @@
     width: 100%;
 }
 
+.kb-function-body .accordion .panel .panel-body {
+    padding: 0px;
+    padding-left: 5px;
+}
+
 .kb-function-body ul {
     border: 1px solid #dddddd;
     list-style-type: none;
